codex-rs/tui/src/snapshots/codex_tui__tooltips__tests__desktop_app_tip_macos.snap
---
source: tui/src/tooltips.rs
assertion_line: 456
expression: rendered
---
Line::from_iter([Span::from("Tip:").bold(), Span::from(" Use the "), Span::from("desktop app").bold(), Span::from(". Run "), Span::from("aicodex").fg(Color::Rgb(166, 227, 161))]) []
Line::from_iter([Span::from("app").fg(Color::Rgb(166, 227, 161)), Span::from(" to open it. It installs")]) []
Line::from("automatically if needed.") []
